# opencv_cuda

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  resize_cpu.cpp  resize_gpu.cpp
